# musializer

./: CMakeLists.txt  README.md
include/: plugin.h  visual_plugin.h
src/: base_plugin.c  musializer.c  plugin.c  sine_wave_compare.c  spectrum_plugin.c
